# triple-h

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  docker-compose.yml  mise.toml  pyproject.toml  skills-lock.json
.github/workflows/: ci.yml
backend/: Dockerfile
backend/doc_extractor/: .env.example  ai_model.py  app.py  config.py  json_extraction.py  ocr.py  prompt_template.py  requirements.txt  table_extraction.py  text_processing.py
docs/: README.md  architecture.md  deployment.md  open-questions.md  technology-selection.md
docs/architecture/: api-routes.md  async-job-queue.md  data-model.md  dependencies.md  extraction-pipeline.md  observability.md  overview.md
docs/decisions/: 0001-three-stage-extraction.md  0002-litellm-proxy.md  0003-arq-pipeline-migration.md  0004-growthbook-flags.md  0005-langfuse-observability.md  0006-opentelemetry-tracing.md  0007-dotenvx-encrypted-env.md  0008-mise-task-runner.md  0009-postgres-job-queue.md  0010-open-weights-models.md  README.md
docs/history/: abandoned-paths.md  origin.md  timeline.md
fastapi_backend/: .dockerignore  .env  Dockerfile  mypy.ini  pyproject.toml  pytest.ini
fastapi_backend/alembic_migrations/versions/: 3e2514bc236e_add_document_page_extraction_run_field_.py  763895bd69c3_add_extraction_job_table.py  9f4136a07caf_add_refinement_run_table.py  a1b8d3c4e5f6_add_rejected_cancelled_doc_status.py  f80865750e97_drop_legacy_items_table.py
fastapi_backend/app/: config.py  database.py  email.py  logging_setup.py  main.py  models.py  observability.py  prompt_template.py  users.py  worker.py
fastapi_backend/app/llm/: __init__.py  client.py  models.py  pipeline.py  providers.py
fastapi_backend/app/middleware/: timing.py
fastapi_backend/app/refinement/: __init__.py  apply_patches.py  coords.py  pipeline.py  schemas.py  signatures.py
fastapi_backend/app/routes/: documents.py  extract.py  jobs.py  refine.py
fastapi_backend/app/services/: architecture.py  blob_store.py  box_overlay.py  chandra.py  chandra_ocr.py  classifier.py  docling_adapter.py  extraction.py  extraction_overlay.py  field_anchors.py  job_queue.py  persistence.py
fastapi_backend/app/services/extraction/: __init__.py  anchors.py  arq.py  correctors.py  pipeline.py  postprocess.py  preprocess.py  result.py  validators.py
fastapi_backend/tests/: test_apply_patches.py  test_extraction_anchors.py  test_extraction_arq.py  test_extraction_correctors.py  test_extraction_pipeline_helpers.py  test_extraction_postprocess.py  test_extraction_preprocess.py  test_extraction_result.py  test_extraction_validators.py  test_field_anchors_envelope.py  test_job_queue.py  test_logging_context.py
fastapi_backend/tests_eval/: conftest.py  create_ground_truth.py  evaluators.py  schemas.py  test_document_detection.py  test_pipeline_eval.py  test_refinement_eval.py
fastapi_backend/tests_eval/datasets/: delivery_orders.yaml  invoices.yaml  weighing_bills.yaml
fastapi_backend/tests_eval/fixtures/delivery_orders/: coltron_sintari.expected.json  ds_steel.expected.json  klang_valley_wire.expected.json  klass_metal.expected.json  uniwell_trading.expected.json
fastapi_backend/tests_eval/fixtures/invoices/: arfi_8038.expected.json
fastapi_backend/tests_eval/fixtures/weighing_bills/: alliance_steel_1.expected.json  alliance_steel_2.expected.json  alliance_steel_3.expected.json
frontend/: .dockerignore  Dockerfile  biome.json  next.config.ts  package.json
frontend/src/app/: PageWrapper.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/chat-bot/: RefreshButton.tsx  index.ts
frontend/src/app/components/: RealisticAvatar.tsx  accordion.tsx  footer.tsx  header.tsx  jobCard.tsx  textarea.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/delivery-orders/: page.tsx
frontend/src/app/documents/: page.tsx
frontend/src/app/multi-upload/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/results/: delivery-order-result.tsx  invoice-result.tsx  processing-metrics.tsx  weighing-bill-result.tsx
frontend/src/components/ui/: button.tsx  toast.tsx
frontend/src/components/upload/: file-dropzone.tsx  model-selector.tsx
frontend/src/lib/: api.ts  constants.ts  types.ts  utils.ts
hh-app/src/services/: interviewService.ts
hh-app/src/types/: next-auth.d.ts
litellm/: config.yaml
local-shared-data/: _chunks_probe.py  _ocr_options_probe.py  _sdk_probe.py  _tracer.py
nextjs-frontend/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  next.config.mjs  openapi-ts.config.ts  openapi.json  package.json  proxy.ts  tailwind.config.js
nextjs-frontend/__tests__/: login.test.tsx  loginPage.test.tsx  passwordReset.test.tsx  passwordResetConfirm.test.tsx  passwordResetConfirmPage.test.tsx  passwordResetPage.test.tsx  register.test.ts  registerPage.test.tsx
nextjs-frontend/app/: globals.css  layout.tsx  page.tsx
nextjs-frontend/app/dashboard/: deleteButton.tsx  layout.tsx  page.tsx
nextjs-frontend/app/design-preview/: page.tsx
nextjs-frontend/app/documents/: page.tsx
nextjs-frontend/app/login/: page.tsx
nextjs-frontend/app/openapi-client/: sdk.gen.ts  types.gen.ts
nextjs-frontend/app/password-recovery/: page.tsx
nextjs-frontend/app/register/: page.tsx
nextjs-frontend/components/: delete-document-button.tsx  extraction-queue.tsx  jobs-panel.tsx  page-overlay.tsx  page-pagination.tsx  page-size-selector.tsx  recent-upload-status.tsx  recent-uploads-list.tsx  site-header.tsx  upload-dropzone.tsx
nextjs-frontend/components/actions/: items-action.ts  login-action.ts  logout-action.ts  password-reset-action.ts  register-action.ts
nextjs-frontend/components/ui/: FormError.tsx  breadcrumb.tsx  submitButton.tsx
nextjs-frontend/lib/: api.ts  clientConfig.ts  definitions.ts  kvp.ts  utils.ts
nextjs-frontend/lib/fixtures/: refinement-run-2.json
proposal/: gen_infra_sheet.py  heng-hup-infra-costs.xlsx  heng-hup-pricing.html  infra-cost-analysis.md  save-pdf.ts
scripts/: check_env_encrypted.py  env_addkey.py  setup.py
(+69 files in other folders)
